--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/btn"
-        android:layout_centerInParent="true">
+        android:layout_centerInParent="true"
+        android:text="@string/button">
 
     </Button>
 
